test/mutation_analysis/s0007_reverse_integer/hafis/ablation_o3_r50/mutants/2/result.txt
./test/mutation_analysis/s0007_reverse_integer/hafis/ablation_o3_r50/mutants/2/Solution.java:32: error: unreachable statement
        if (rev > Integer.MAX_VALUE || rev < Integer.MIN_VALUE) {
        ^
1 error
